--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.3",
-        "bootstrap": "^5.0.1",
+        "bootstrap": "4.6",
         "jquery": "^3.6.0",
         "node-sass": "^6.0.0",
+        "popper.js": "^1.16.1",
         "sass-loader": "^11.1.1",
         "webpack": "^5.37.1"
     }
