--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
+    dossier_images: '%kernel.project_dir%/public/images/photo_profil'
+    dossier_images_default: '%kernel.project_dir%/public/images/photo_profil_default'
 
 services:
     # default configuration for services in *this* file
