--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.3",
         "bootstrap": "4.6",
+        "bs-custom-file-input": "^1.3.4",
         "jquery": "^3.6.0",
         "node-sass": "^6.0.0",
         "popper.js": "^1.16.1",
